# Polymath-AI

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  HANDOFF-TO-ORCHESTRATOR.md  HANDOFF-TO-OVERNIGHT-EXECUTOR.md  MODUS-OPERANDI.md  ORCHESTRATOR-STARTUP-PROMPT.md  PRD.md  README.md  RESISTANCE-V2.md  pyproject.toml  requirements-host.txt
.github/workflows/: publish.yml
.gpd/: CONVENTIONS.md  DECISIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  hypotheses.yaml  runlog.jsonl  state.json
docs/: AUDIT-SPEC.md  CORPUS-SPEC.md  CURRENT_PUBLIC_STATUS.md  DECISIONS.md  EXECUTION-REPORT.md  FALSIFIERS.md  FRESH-CONTEXT-HANDOVER-2026-05-16-SOC-GEMMA4-PIVOT.md  FRESH-CONTEXT-HANDOVER-SOC-ARCHITECTURE-V2.md  FRESH-CONTEXT-HANDOVER-SOC-ARCHITECTURE.md  GAME-SPACE-FRIDGE-RUNBOOK.md  HANDOFF-HARDWARE-NATIVE-TRAINING-POVC-EXECUTOR.md  HANDOFF-PHASE13-GEMMA4-ONLY-HETEROGENEOUS-EXECUTOR.md  HANDOFF-TO-APPLE-SILICON.md  HANDOFF-TO-LINUX-X86_64.md  HETEROGENEOUS-SOC-RESEARCH-DIALOGUE.md  NOTE-TO-REPO-AGENT-2026-05-02.md  ORCHESTRATOR-POV-PHASE13-TO-PHASE14-DRIFT-CLEANUP.md  PHASE-0G-PLAN.md  PHONE-ATTACH-RUNBOOK.md  PHONE-OVERNIGHT-RUNBOOK.md  PRD-GEMMA4-SNAPDRAGON-MEGAKERNEL-HETEROGENEOUS-TRAINING.md  PRD-HARDWARE-NATIVE-TRAINING-POVC.md  PRD-PHASE13-GEMMA4-ONLY-HETEROGENEOUS-CORPUS-SCALE.md  PRD-PREP-GEMMA4-MEGAKERNEL-OVERNIGHT-EXECUTION.md  REPORT-2026-05-02-comprehensive.md  REPORT-2026-05-02-phase-0-1a-progress.md  ROADMAP-ETA-2026-05-02.md  STARTUP-PROMPT-HARDWARE-NATIVE-TRAINING-POVC.md  STARTUP-PROMPT-PHASE13-GEMMA4-ONLY-HETEROGENEOUS.md  STARTUP-PROMPT-PHASE14-DRIFT-CLEANUP-ORCHESTRATOR.md  STATUS-2026-05-16-SOC-GEMMA4-PIVOT.md
docs/dm3-vulkan-prior-art/: README.md  dm3_probe_vulkan.jsonl  dm3_probe_vulkan_stdout.txt  shaders.wgsl
docs/runbooks/: GEMMA4-LAYER-FORWARD-PARITY-GATE.md  RUNPOD-QUALCOMM-GEMMA4-MEGAKERNEL-SETUP.md
integrations/gemma4-snapdragon-megakernel/: IMPORT_FILE_INDEX.tsv  MANIFEST.md
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/: CMakeLists.txt  README.md
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/android/adb/: README.md  deploy_and_probe.sh  probe_gpu_shell.sh  probe_phone_gate.sh  run_layer_gate.sh  run_native_gpu_probe.sh  run_opencl_gate.sh
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/android/cmake/: build_android.sh
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/include/polymath/gemma4/: adapter_training.h  data_pipeline.h  device_backend.h  executor_interfaces.h  json_writer.h  layer_pack_reader.h  opencl_layer_runner.h  sha256.h  status.h
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/src/backends/: cpu_debug_backend.cpp  device_probe.cpp  opencl_layer_runner.cpp
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/src/core/: json_writer.cpp  sha256.cpp
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/src/data/: tokenizer_packer.cpp
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/src/model/: layer_pack_reader.cpp
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/src/runner/: main.cpp  opencl_recordable_queue_probe.cpp  phase11_runner.cpp
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/tools/compare_outputs/: README.md  compare_adapter_training.py  compare_outputs.py  compare_token_cache.py  final_falsifier_review.py  test_compare_outputs.py
integrations/gemma4-snapdragon-megakernel/gemma4_megakernel/tools/reference/: create_adapter_training_fixture.py  create_e4b_layer0_reference.py  create_h11f_topk_teacher_shard.py  create_streamed_distill_reference.py  export_streamed_training_assets.py  export_tokenizer_bpe.py
integrations/gemma4-snapdragon-megakernel/polymath_native/: CMakeLists.txt  README.md
integrations/gemma4-snapdragon-megakernel/polymath_native/android/: README.md
integrations/gemma4-snapdragon-megakernel/polymath_native/backends/opencl/: README.md  kernels.cl
integrations/gemma4-snapdragon-megakernel/polymath_native/backends/vulkan/: README.md  kernels.comp
integrations/gemma4-snapdragon-megakernel/polymath_native/include/polymath_native/: cpu_kernels.h
integrations/gemma4-snapdragon-megakernel/polymath_native/kernels/cpu/: README.md
integrations/gemma4-snapdragon-megakernel/polymath_native/kernels/opencl/: kernels.cl
integrations/gemma4-snapdragon-megakernel/polymath_native/kernels/vulkan/: kernels.comp
integrations/gemma4-snapdragon-megakernel/polymath_native/model_spec/: gemma4_e2b.json  gemma4_e4b.json
integrations/gemma4-snapdragon-megakernel/polymath_native/src/: cpu_kernels.cpp
integrations/gemma4-snapdragon-megakernel/polymath_native/telemetry/: schema.json
integrations/gemma4-snapdragon-megakernel/polymath_native/tests/: native_kernel_tests.cpp
integrations/gemma4-snapdragon-megakernel/polymath_native/tests/golden/: README.md
integrations/gemma4-snapdragon-megakernel/polymath_native/tests/parity/: README.md
integrations/gemma4-snapdragon-megakernel/polymath_native/tools/: generate_golden.py  inspect_gemma4.py  probe_android_device.sh  run_kernel_tests.py
polymath_ai/: __init__.py  _version.py
polymath_ai/audit/: __init__.py  chain.py
polymath_ai/boundary/: __init__.py  scanner.py  text.py
polymath_ai/corpus/: __init__.py  fertility.py  license_classes.py  manifest.py
polymath_ai/device/: __init__.py  probe.py
polymath_ai/dispatch/: __init__.py  adapters.py  export_probe.py
polymath_ai/elo/: __init__.py  trainer.py
polymath_ai/experiments/: __init__.py  phase0a.py  phase0c.py  phase0e.py  phase0f.py  runner.py
polymath_ai/falsifiers/: __init__.py  registry.py
polymath_ai/kg/: __init__.py  graph.py
source-briefs/: 01-on-device-training-blueprint.md
synthesis/: 01-fresh-eyes-on-polymath-blueprint.md
tests/: conftest.py  test_audit_chain.py  test_boundary.py  test_corpus.py  test_device_probe.py  test_dispatch.py  test_elo.py  test_elo_stage2_integration.py  test_falsifiers.py  test_fertility.py  test_kg.py  test_pending_uploads.py  test_runner.py  test_scheduler.py  test_schemas.py
(+5346 files in other folders)
